# icfp-2007

./: .gitignore  FastString.hs  FastString2.hs  FastString3.hs  FastStringBench.hs  FastStringTest.hs  FastStringVisualise.hs  GInstr.hs  Makefile  README  dna2rna.hs  draw.c  icfp2007-ejt.cabal  journal.org  list.c  list.h  raw2png  rna2gbc.hs
